--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>前端资料整合</title>
-    <link rel="stylesheet" type="text/css" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/demo_styles.css">
-    <link rel="stylesheet" href="css/demo1.css">
-    <link rel="stylesheet" type="text/css" href="css/default.css">
+    <link rel="stylesheet" type="text/css" href="./css/normalize.css" />
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/demo_styles.css">
+    <link rel="stylesheet" href="./css/demo1.css">
+    <link rel="stylesheet" type="text/css" href="./css/default.css">
     <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     <script src="jquery-1.10.2.min.js"></script>
 </head>
