--- a/runoob/runoob_css.html
+++ b/runoob/runoob_css.html
@@ -3,15 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<title>CSS参考手册</title>
-	<link rel="stylesheet" href="CSS/style.css">
-	<script type="text/javascript" src="JS/main.js"></script>
+	<link rel="stylesheet" href="./CSS/style.css">
+	<script type="text/javascript" src="./JS/main.js"></script>
 </head>
 <body>
 	<!-- 头部 -->
 	<div id="head">
 		<div class="nav">
 			<div class="logo clearfix">
-				<a href="http://www.runoob.com/"><img src="images/logo.jpg"></a>
+				<a href="http://www.runoob.com/"><img src="./images/logo.jpg"></a>
 			</div>
 			<div class="text">
 				<input type="text" placeholder="搜索..." class="text_input">
@@ -275,7 +275,7 @@
 					<div class="next-link">
 						<div class="nextLink">
 							<a href="css_select.html">CSS 选择器</a>
-							<a href="css_select.html"><img src="images/jiantouright.png" height="14px"></a>
+							<a href="css_select.html"><img src="./images/jiantouright.png" height="14px"></a>
 						</div>
 					</div>
 					<div class="article-body">
@@ -285,7 +285,7 @@
 							</h1>
 							<div class="intro">
 								<p>
-									<img src="images/icon_small_star.gif" height="25" alt="note" style="float: left; margin-right: 8px;">
+									<img src="./images/icon_small_star.gif" height="25" alt="note" style="float: left; margin-right: 8px;">
 									菜鸟教程的 CSS 参考手册在所有主流浏览器中测试通过.
 								</p>
 							</div>
@@ -2207,7 +2207,7 @@
 					<div class="next-link">
 						<div class="nextLink">
 							<a href="css_select.html">CSS 选择器</a>
-							<a href="css_select.html"><img src="images/jiantouright.png" height="14px"></a>
+							<a href="css_select.html"><img src="./images/jiantouright.png" height="14px"></a>
 						</div>
 					</div>
 				</div>
@@ -2215,7 +2215,7 @@
 			<!-- 右侧导航栏 -->
 			<div class="right-column">
 				<div class="sidebar-box">
-						<a href="#"><img src="images/liebiao.png" height="16" style="float: left; margin-top: 2px;">分类导航</a>
+						<a href="#"><img src="./images/liebiao.png" height="16" style="float: left; margin-top: 2px;">分类导航</a>
 				</div>
 				<div class="sidebar-tree">
 					<ul id="one">
