--- a/runoob/runoob_js.html
+++ b/runoob/runoob_js.html
@@ -3,15 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<title>JavaScript 和 HTML DOM参考手册</title>
-	<link rel="stylesheet" href="CSS/style.css">
-	<script type="text/javascript" src="JS/main.js"></script>
+	<link rel="stylesheet" href="./CSS/style.css">
+	<script type="text/javascript" src="./JS/main.js"></script>
 </head>
 <body>
 	<!-- 头部 -->
 	<div id="head">
 		<div class="nav">
 			<div class="logo clearfix">
-				<a href="http://www.runoob.com/"><img src="images/logo.jpg"></a>
+				<a href="http://www.runoob.com/"><img src="./images/logo.jpg"></a>
 			</div>
 			<div class="text">
 				<input type="text" placeholder="搜索..." class="text_input">
@@ -157,7 +157,7 @@
 					<div class="next-link">
 						<div class="nextLink">
 							<a href="#">JavaScript Array 对象</a>
-							<a href="#"><img src="images/jiantouright.png" height="14px"></a>
+							<a href="#"><img src="./images/jiantouright.png" height="14px"></a>
 						</div>
 					</div>
 					<div class="article-body">
@@ -232,7 +232,7 @@
 					<div class="next-link">
 						<div class="nextLink">
 							<a href="#">JavaScript Array 对象</a>
-							<a href="#"><img src="images/jiantouright.png" height="14px"></a>
+							<a href="#"><img src="./images/jiantouright.png" height="14px"></a>
 						</div>
 					</div>
 				</div>
@@ -241,7 +241,7 @@
 			<div class="right-column">
 				<!-- 导航部分 -->
 				<div class="sidebar-box">
-						<a href="#"><img src="images/liebiao.png" height="16" style="float: left; margin-top: 2px;">分类导航</a>
+						<a href="#"><img src="./images/liebiao.png" height="16" style="float: left; margin-top: 2px;">分类导航</a>
 				</div>
 				<div class="sidebar-tree">
 					<ul id="one">
