--- a/runoob/runoob_html.html
+++ b/runoob/runoob_html.html
@@ -3,15 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<title>HTML参考手册</title>
-	<link rel="stylesheet" href="CSS/style.css">
-	<script type="text/javascript" src="JS/main.js"></script>
+	<link rel="stylesheet" href="./CSS/style.css">
+	<script type="text/javascript" src="./JS/main.js"></script>
 </head>
 <body>
 	<!-- 头部 -->
 	<div id="head">
 		<div class="nav">
 			<div class="logo clearfix">
-				<a href="http://www.runoob.com/"><img src="images/logo.jpg"></a>
+				<a href="http://www.runoob.com/"><img src="./images/logo.jpg"></a>
 			</div>
 			<div class="text">
 				<input type="text" placeholder="搜索..." class="text_input">
@@ -198,7 +198,7 @@
 					<div class="next-link">
 						<div class="nextLink">
 							<a href="#">HTML 标签列表（功能排序）</a>
-							<a href="#"><img src="images/jiantouright.png" height="14px"></a>
+							<a href="#"><img src="./images/jiantouright.png" height="14px"></a>
 						</div>
 					</div>
 					<div class="article-body">
@@ -686,12 +686,12 @@
 					</div>
 					<div class="next-link">
 						<div class="lastLink">
-							<a href="runoob_css.html"><img src="images/jiantouleft.png" height="14px"></a>
+							<a href="runoob_css.html"><img src="./images/jiantouleft.png" height="14px"></a>
 							<a href="runoob_css.html">CSS 参考手册</a>
 						</div>
 						<div class="nextLink">
 							<a href="#">CSS 听觉参考手册</a>
-							<a href="#"><img src="images/jiantouright.png" height="14px"></a>
+							<a href="#"><img src="./images/jiantouright.png" height="14px"></a>
 						</div>
 					</div>
 				</div>
@@ -700,7 +700,7 @@
 			<div class="right-column">
 				<!-- 导航部分 -->
 				<div class="sidebar-box">
-						<a href="#"><img src="images/liebiao.png" height="16" style="float: left; margin-top: 2px;">分类导航</a>
+						<a href="#"><img src="./images/liebiao.png" height="16" style="float: left; margin-top: 2px;">分类导航</a>
 				</div>
 				<div class="sidebar-tree">
 					<ul id="one">
