--- a/index.html
+++ b/index.html
@@ -196,15 +196,18 @@
     <div class="pic1">
         <img src="images/code.png" height="200">
     </div>
-    <!-- <div class="pic2">
-        <img src="images/weather.png" height="200">
-    </div> 
-    <div class="pic3">
-        <img src="images/notfound.png" height="200">
-    </div>  -->
     <script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/demo.js"></script>
+    <script type="text/javascript">
+        var userAgent = navigator.userAgent;
+        if (userAgent.indexOf("Chrome") <= -1 || userAgent.indexOf("Edge") > -1){
+            $("body").html(`
+                <div>由于未作兼容性处理，请使用最新版Chrome打开</div>
+                `);
+            $("div").addClass("text");
+        }
+    </script>
 </body>
 
 </html>
