--- a/index.html
+++ b/index.html
@@ -194,10 +194,10 @@
         </div>
     </div>
     <div class="pic1">
-        <img src="images/code.png" height="200">
+        <img src="./images/code.png" height="200">
     </div>
-    <script src="js/plugins.js"></script>
-    <script src="js/demo.js"></script>
+    <script src="./js/plugins.js"></script>
+    <script src="./js/demo.js"></script>
     <script type="text/javascript">
         var userAgent = navigator.userAgent;
         if (userAgent.indexOf("Chrome") <= -1 || userAgent.indexOf("Edge") > -1){
