--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/demo1.css">
     <link rel="stylesheet" type="text/css" href="./css/default.css">
     <script src="js/vendor/modernizr-2.6.2.min.js" async></script>
-    <script src="jquery-1.10.2.min.js" async></script>
+    <script src="jquery-1.10.2.min.js"></script>
 </head>
 
 <body class="dm-demo1">
