--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         var userAgent = navigator.userAgent;
         if (userAgent.indexOf("Chrome") <= -1 || userAgent.indexOf("Edge") > -1){
             $("body").html(`
-                <div>由于未作兼容性处理，请使用最新版Chrome打开</div>
+                <div>由于未作兼容性处理，请使用最新桌面版Chrome打开</div>
                 `);
             $("div").addClass("text");
         }
